--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -16,17 +16,12 @@
     <!--</change-notes>-->
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
-    <idea-version since-build="145.0"/>
+    <idea-version since-build="107.105"/>
 
     <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/plugin_compatibility.html
          on how to target different products -->
-    <!-- uncomment to enable plugin in all products
+    <!-- uncomment to enable plugin in all products -->
     <depends>com.intellij.modules.lang</depends>
-    -->
-
-    <extensions defaultExtensionNs="com.intellij">
-        <!-- Add your extensions here -->
-    </extensions>
 
     <actions>
         <group id="emacsIDEAs" text="emacsIDEAs" description="emacsIDEAs">
@@ -59,5 +54,4 @@
         <applicationService serviceImplementation="me.ihxq.acejump.lite.options.PluginConfig"/>
         <applicationConfigurable instance="me.ihxq.acejump.lite.options.IdeaConfigurable"/>
     </extensions>
-
 </idea-plugin>
