--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
     <id>me.ihxq.acejump.lite</id>
     <name>AceJump-Lite</name>
-    <version>1.0b</version>
+    <version>1.1</version>
     <vendor email="hxqfor@live.com" url="http:/www.ihxq.me">Blog</vendor>
 
     <description><![CDATA[
